--- a/FixQuirks/FixQuirks/FixQuirks.csproj
+++ b/FixQuirks/FixQuirks/FixQuirks.csproj
@@ -38,6 +38,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Releases\KeesTalksTech.FixQuirks.1.0.0.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
